# bigquery-ai-kaggle

./: .envrc  .gitignore  CRAWL_SUBGOALS.md  PHASE_7_CHECKPOINT_TRACKER.md  PHASE_8_IMPLEMENTATION_PLAN.md  PROJECT_ROADMAP.md  README.md  REMAINING_TESTS_ANALYSIS.md  add_brand_level_stage9.py  add_competitive_insights_to_stage8.py  add_comprehensive_showcase_summary.py  add_comprehensive_stage5_analysis.py  add_creative_fatigue_timeseries.py  add_dataframe_stage5_analysis.py  add_fatigue_insights_dataframe.py  add_pmf_histograms.py  add_proper_intro.py  add_stage5_preview.py  add_stage6_embeddings.py  add_stage8_analysis.py  add_stage9_intelligence.py  add_tabular_stage5_analysis.py  add_temporal_with_confidence.py  add_working_brand_level_stage9.py  analyze_cell_order.py  analyze_corpus_growth.py  analyze_skipped_ads.py  check_funnel_capitalization.py  check_raw_schema.py  check_raw_urls.py  check_schema.py  clean_all_artifacts.py  clean_intermediate_only.py  clean_slate_reset.py  cleanup_gcs_bucket.py  compare_data_flow.md  comprehensive_stage8_fix.py  create_clean_notebook.py  create_corrected_fatigue_view.py  create_fatigue_view_and_update_analysis.py  (+89 more)
.us-ads-radar/: pyvenv.cfg
config/: .gitkeep
docs/: BIGQUERY_AI_ML_FUNCTIONS_REFERENCE.md  DEMO_NOTEBOOK_PLAN.md  L4_TEMPORAL_ENHANCEMENT_PLAN.md  MULTIMODAL_INTEGRATION_PLAN.md  PROJECT_STATUS.md  SUBGOALS_AUDIT.md  advanced_features_design.md  advanced_features_summary.md  architecture.txt  bigquery_command_reference.md  blog_post.md  competitor-name-validation-strategy.md  demo_presentation_guide.md  demo_runbook.md  demo_walkthrough_script.md  embedding-strategy-roadmap.md  forecasting_architecture.md  google_cse_setup.md  innovation_section.md  innovation_section_detailed.md  kaggle_competition_writeup.md  pipeline_architecture_documentation.md  pipeline_diagrams.md  pipeline_mermaid_diagrams.md  problem_and_impact_statement.md  project_status_summary.md  technical_architecture_section.md  validation_remaining_scope.md
notebooks/: .gitkeep  Meta_Ads_Competitor_Intelligence_Demo.ipynb  demo_competitive_intelligence.ipynb  demo_competitive_intelligence.ipynb.backup  demo_competitive_intelligence_clean.ipynb  stage_testing_demo.ipynb
scripts/: add_stage2_notebook.py  add_stage3_notebook.py  add_stage4_notebook.py  analyze_ad_structure.py  check_actual_data.py  check_bigquery_data.py  compete_intel_pipeline.py  competitor_name_validator.py  create_ads_with_dates.py  create_mock_copying_scenarios.py  create_mock_strategic_labels.py  create_timeseries_tables.py  debug_pagination.py  debug_schema.py  discover_competitors_v2.py  fallback_hybrid_curation.py  fix_cell12_analysis.py  fix_notebook_creds.py  fix_notebook_env.py  fix_notebook_time_import.py  fix_stage3_analysis.py  fix_stage3_estimated_count.py  fix_stage3_insights.py  fix_tier1_strategic_goldmine.py  ingest_fb_ads.py  ingest_temporal_ads.py  run_all_sql.sh  run_comprehensive_tests.py  run_curation.py  run_easy_tests.py  run_ingest.sh  run_realistic_tests.py  sample_for_manual_review.py  test_ad_api.py  test_basic_forecasting_concept.py  test_brand_voice_changes.py  test_cascade_detection_calibrated.py  test_company_search.py  test_competitive_copying_detection.py  test_competitive_copying_enhanced_v2.py  (+36 more)
sql/: 00_schema.sql  01_seed_sample.sql  02_label_ads.sql  02_label_ads_batch.sql  03_embeddings.sql  04_search_examples.sql  05_rollups.sql  06_curate_competitors.sql  06_enhanced_creative_analysis.sql  07_validation_tests.sql  ads_with_dates_table.sql  ai_forecast_distribution_evolution.sql  analyze_embedding_differences.sql  brand_voice_consistency_view.sql  compare_embedding_quality.sql  compare_gemini_models.sql  competitive_influence_scoring.sql  competitive_influence_scoring_v2.sql  competitive_influence_view.sql  competitive_response_similarity_detection.sql  comprehensive_forecasting_toolkit.sql  create_ads_embeddings_table.sql  create_ads_with_dates.sql  create_company_validation_model.sql  create_diverse_test_embeddings.sql  create_dual_vector_embeddings.sql  create_dual_vector_similarity_views.sql  create_hybrid_intelligence_enhancement.sql  create_improved_competitors_validated.sql  create_mock_time_series_data.sql  create_production_dual_vector_pipeline.sql  create_similarity_search_functions.sql  create_simple_hybrid_intelligence.sql  create_strategic_classification_working.sql  create_text_embedding_model.sql  create_text_embeddings.sql  creative_fatigue_analysis_fixed.sql  cta_aggressiveness_scoring.sql  (+30 more)
(+461 files in other folders)
